[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Bygga_saker.gd" type="Script" id=1]
[ext_resource path="res://sprites/progress_bar.png" type="Texture" id=2]
[ext_resource path="res://sprites/mark.png" type="Texture" id=3]
[ext_resource path="res://sprites/vatten.png" type="Texture" id=4]
[ext_resource path="res://sprites/vägg.png" type="Texture" id=5]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="avpå vatten" type="TextureButton" parent="CanvasLayer"]
margin_left = 82.0
margin_top = 63.0
margin_right = 122.0
margin_bottom = 103.0
texture_normal = ExtResource( 4 )

[node name="avpå golv" type="TextureButton" parent="CanvasLayer"]
margin_left = 160.0
margin_top = 64.0
margin_right = 200.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )

[node name="avpå building" type="Button" parent="CanvasLayer"]
margin_left = 60.0
margin_top = 124.0
margin_right = 305.0
margin_bottom = 159.0

[node name="avpå vägg" type="TextureButton" parent="CanvasLayer"]
margin_left = 250.0
margin_top = 64.0
margin_right = 290.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 680.0
margin_top = 40.0
margin_right = 1320.0
margin_bottom = 104.0
rect_scale = Vector2( 0.5, 0.5 )
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 1
tint_under = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
tint_progress = Color( 0.898039, 0.027451, 0.027451, 1 )

[node name="HungerBar" type="TextureProgress" parent="CanvasLayer"]
margin_left = 680.0
margin_top = 80.0
margin_right = 1320.0
margin_bottom = 144.0
rect_scale = Vector2( 0.5, 0.5 )
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 1
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.462745, 0.184314, 0.0196078, 1 )

[connection signal="pressed" from="CanvasLayer/avpå vatten" to="." method="_on_avp_vatten_pressed"]
[connection signal="pressed" from="CanvasLayer/avpå golv" to="." method="_on_avp_golv_pressed"]
[connection signal="pressed" from="CanvasLayer/avpå building" to="." method="_on_avp_building_pressed"]
[connection signal="pressed" from="CanvasLayer/avpå vägg" to="." method="_on_avp_vgg_pressed"]
